// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CpsRecommendations should not render when cpsRecommendations toggle is disabled 1`] = `<div />`;

exports[`CpsRecommendations should not render when the service does not support recommendations 1`] = `<div />`;

exports[`CpsRecommendations should not render when there is no recommendations data 1`] = `<div />`;

exports[`CpsRecommendations should render when cpsRecommendations toggle is enabled and the service supports recommendations for a single item 1`] = `
@media (max-width:14.9375rem) {
  .emotion-0 {
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-0 {
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-0 {
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-0 {
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-0 {
    margin-left: 20%;
  }
}

@media (min-width:80rem) {
  .emotion-0 {
    margin-left: 40%;
  }
}

@supports (display:grid) {
  .emotion-0 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width:14.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(5,1fr);
      grid-column-end: span 5;
      grid-column-start: 1;
    }
  }

  @media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(5,1fr);
      grid-column-end: span 5;
      grid-column-start: 2;
    }
  }

  @media (min-width:80rem) {
    .emotion-0 {
      grid-template-columns: repeat(10,1fr);
      grid-column-end: span 10;
      grid-column-start: 5;
    }
  }
}

.emotion-2 {
  background-color: #F2F2F2;
  margin: 1.5rem 0;
  padding: 1rem 0.5rem;
}

@media (min-width: 25rem) and (max-width: 62.9375rem) {
  .emotion-2 {
    margin: 0 0 1.5rem;
    padding: 0 0 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    margin: 0 0 1.5rem;
    padding: 1rem 0;
  }
}

@media (min-width: 63rem) {
  .emotion-2 {
    padding: 1rem;
  }
}

@media (max-width: 24.9375rem) {
  .emotion-4 {
    padding: 0 0.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 62.9375rem) {
  .emotion-4 {
    padding: 0 1rem;
  }
}

.emotion-6 {
  position: relative;
}

.emotion-8 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.875rem;
  line-height: 1rem;
  background-color: #FFFFFF;
  border: 0.125rem solid #222222;
  color: #222222;
  display: block;
  left: 0;
  line-height: 1;
  padding: 0.75rem;
  position: absolute;
  -webkit-text-decoration: none;
  text-decoration: none;
  top: 0;
  z-index: 10;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 0.8125rem;
  }
}

.emotion-8:not(:focus):not(:active) {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-10 {
  margin: 0;
  padding: 0;
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    margin: 0 0 1rem;
  }
}

.emotion-12 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-12 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-12 {
    margin-bottom: 1.5rem;
  }
}

.emotion-14 {
  margin: 0;
  padding: 0;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width:37.5rem) {
  .emotion-18 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-20 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #F2F2F2;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-20 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-20 {
    font-size: 1.5rem;
    line-height: 2rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-20 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .emotion-20 {
    padding-right: 1rem;
  }
}

@supports (display:grid) {
  .emotion-24 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width:14.9375rem) {
    .emotion-24 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-24 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-24 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-24 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-24 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width:80rem) {
    .emotion-24 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 1rem;
    }
  }
}

.emotion-26>div {
  display: grid;
  margin: 0.25rem 0;
  background-color: #FDFDFD;
}

@media (max-width: 62.9375rem) {
  .emotion-26>div {
    margin: 0.25rem 0;
  }
}

.emotion-28 {
  position: relative;
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-28 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }

  @media (min-width:37.5rem) {
    .emotion-28 {
      grid-column-gap: 1rem;
    }
  }

  @media (min-width:63rem) {
    .emotion-28 {
      display: block;
    }
  }
}

.emotion-30 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

@media (min-width:63rem) {
  .emotion-30 {
    display: block;
    width: 100%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-30 {
    width: initial;
    grid-column: 1/span 2;
  }
}

.emotion-32 {
  position: relative;
}

.emotion-34 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #F2F2F2;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 60px 17px;
  padding-bottom: 56.25%;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

@media (min-width:25rem) {
  .emotion-34 {
    background-size: 77px 22px;
  }
}

@media (min-width:63rem) {
  .emotion-34 {
    background-size: 93px 27px;
  }
}

@media (min-width:25rem) {
  .emotion-36 {
    position: absolute;
    bottom: 0;
  }
}

.emotion-36>* {
  height: 2rem;
  padding: 0.5rem 0.25rem;
}

@media (max-width:24.9375rem) {
  .emotion-36>* {
    height: 1.25rem;
    padding: 0.25rem 0.25rem 0;
  }
}

.emotion-38 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

@media (min-width:37.5rem) {
  .emotion-38 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .emotion-38 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-38 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3/span 4;
  }

  @media (min-width:63rem) {
    .emotion-38 {
      padding-top: 0.5rem;
    }
  }
}

.emotion-40 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  padding: 0.5rem 0.5rem 0.5rem 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-40 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-40 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 63rem) {
  .emotion-40 {
    padding: 0.5rem 1rem 1rem 0;
  }
}

.emotion-42 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  overflow-wrap: anywhere;
}

.emotion-42:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-42:hover,
.emotion-42:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-42:visited {
  color: #6E6E73;
}

.emotion-44 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <div
    class="emotion-0 emotion-1"
    dir="ltr"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <section
        aria-labelledby="recommendations-heading"
        class=" emotion-4 emotion-5"
        data-e2e="recommendations-heading"
        role="region"
      >
        <div
          class="emotion-6 emotion-7"
        >
          <a
            class="emotion-8 emotion-9"
            href="#end-of-recommendations"
          >
            Saltar Quizás también te interese y continuar leyendo
          </a>
          <div
            class="emotion-10 emotion-11 emotion-12 emotion-13"
          >
            <strong
              class="emotion-14 emotion-15"
            >
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                >
                  <span
                    class="emotion-20 emotion-21"
                    dir="ltr"
                    id="recommendations-heading"
                  >
                    Quizás también te interese
                  </span>
                </span>
              </span>
            </strong>
          </div>
          <div
            class="emotion-22 emotion-23"
          >
            <div
              class="emotion-24 emotion-1"
              dir="ltr"
            >
              <div
                class="emotion-26 emotion-27"
                data-e2e="story-promo-wrapper"
              >
                <div
                  class="emotion-28 emotion-29"
                  data-e2e="story-promo"
                >
                  <div
                    class="emotion-30 emotion-31"
                    dir="ltr"
                  >
                    <div
                      class="emotion-32 emotion-33"
                    >
                      <div
                        class="emotion-34 emotion-35"
                      >
                        <div
                          class="lazyload-wrapper"
                        >
                          <div
                            class="lazyload-placeholder"
                          />
                        </div>
                      </div>
                      <div
                        class="emotion-36 emotion-37"
                      />
                    </div>
                  </div>
                  <div
                    class="emotion-38 emotion-39"
                    dir="ltr"
                  >
                    <div
                      class="emotion-40 emotion-41"
                    >
                      <a
                        class="emotion-42 emotion-43"
                        href="/mundo/noticias-53377054"
                      >
                        La conmovedora historia de cómo una madre y el hombre preso por la muerte de su hija se unieron para atrapar al verdadero asesino
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <p
            class="emotion-44 emotion-45"
            id="end-of-recommendations"
            tabindex="-1"
          >
            Final de Quizás también te interese
          </p>
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`CpsRecommendations should render when cpsRecommendations toggle is enabled and the service supports recommendations for multiple items 1`] = `
@media (max-width:14.9375rem) {
  .emotion-0 {
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-0 {
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-0 {
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-0 {
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-0 {
    margin-left: 20%;
  }
}

@media (min-width:80rem) {
  .emotion-0 {
    margin-left: 40%;
  }
}

@supports (display:grid) {
  .emotion-0 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width:14.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(5,1fr);
      grid-column-end: span 5;
      grid-column-start: 1;
    }
  }

  @media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(5,1fr);
      grid-column-end: span 5;
      grid-column-start: 2;
    }
  }

  @media (min-width:80rem) {
    .emotion-0 {
      grid-template-columns: repeat(10,1fr);
      grid-column-end: span 10;
      grid-column-start: 5;
    }
  }
}

.emotion-2 {
  background-color: #F2F2F2;
  margin: 1.5rem 0;
  padding: 1rem 0.5rem;
}

@media (min-width: 25rem) and (max-width: 62.9375rem) {
  .emotion-2 {
    margin: 0 0 1.5rem;
    padding: 0 0 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    margin: 0 0 1.5rem;
    padding: 1rem 0;
  }
}

@media (min-width: 63rem) {
  .emotion-2 {
    padding: 1rem;
  }
}

@media (max-width: 24.9375rem) {
  .emotion-4 {
    padding: 0 0.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 62.9375rem) {
  .emotion-4 {
    padding: 0 1rem;
  }
}

.emotion-6 {
  position: relative;
}

.emotion-8 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.875rem;
  line-height: 1rem;
  background-color: #FFFFFF;
  border: 0.125rem solid #222222;
  color: #222222;
  display: block;
  left: 0;
  line-height: 1;
  padding: 0.75rem;
  position: absolute;
  -webkit-text-decoration: none;
  text-decoration: none;
  top: 0;
  z-index: 10;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 0.8125rem;
  }
}

.emotion-8:not(:focus):not(:active) {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-10 {
  margin: 0;
  padding: 0;
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    margin: 0 0 1rem;
  }
}

.emotion-12 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-12 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-12 {
    margin-bottom: 1.5rem;
  }
}

.emotion-14 {
  margin: 0;
  padding: 0;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width:37.5rem) {
  .emotion-18 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-20 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #F2F2F2;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-20 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-20 {
    font-size: 1.5rem;
    line-height: 2rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-20 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .emotion-20 {
    padding-right: 1rem;
  }
}

.emotion-23 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

@supports (display:grid) {
  .emotion-23 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width:14.9375rem) {
    .emotion-23 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-23 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-23 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-23 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-23 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width:80rem) {
    .emotion-23 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 1rem;
    }
  }
}

.emotion-26:last-child {
  border: none;
}

@supports (display:grid) {
  .emotion-26 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width:14.9375rem) {
    .emotion-26 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
    }
  }

  @media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-26 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
    }
  }

  @media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-26 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
    }
  }

  @media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-26 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
    }
  }

  @media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-26 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
    }
  }

  @media (min-width:80rem) {
    .emotion-26 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
    }
  }
}

@supports (display:grid) {
  .emotion-28 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width:14.9375rem) {
    .emotion-28 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-28 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-28 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-28 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-28 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width:80rem) {
    .emotion-28 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 1rem;
    }
  }
}

.emotion-30>div {
  display: grid;
  margin: 0.25rem 0;
  background-color: #FDFDFD;
}

@media (max-width: 62.9375rem) {
  .emotion-30>div {
    margin: 0.25rem 0;
  }
}

.emotion-32 {
  position: relative;
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-32 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }

  @media (min-width:37.5rem) {
    .emotion-32 {
      grid-column-gap: 1rem;
    }
  }

  @media (min-width:63rem) {
    .emotion-32 {
      display: block;
    }
  }
}

.emotion-34 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

@media (min-width:63rem) {
  .emotion-34 {
    display: block;
    width: 100%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-34 {
    width: initial;
    grid-column: 1/span 2;
  }
}

.emotion-36 {
  position: relative;
}

.emotion-38 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #F2F2F2;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 60px 17px;
  padding-bottom: 56.25%;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

@media (min-width:25rem) {
  .emotion-38 {
    background-size: 77px 22px;
  }
}

@media (min-width:63rem) {
  .emotion-38 {
    background-size: 93px 27px;
  }
}

@media (min-width:25rem) {
  .emotion-40 {
    position: absolute;
    bottom: 0;
  }
}

.emotion-40>* {
  height: 2rem;
  padding: 0.5rem 0.25rem;
}

@media (max-width:24.9375rem) {
  .emotion-40>* {
    height: 1.25rem;
    padding: 0.25rem 0.25rem 0;
  }
}

.emotion-42 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

@media (min-width:37.5rem) {
  .emotion-42 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .emotion-42 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-42 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3/span 4;
  }

  @media (min-width:63rem) {
    .emotion-42 {
      padding-top: 0.5rem;
    }
  }
}

.emotion-44 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  padding: 0.5rem 0.5rem 0.5rem 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-44 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-44 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 63rem) {
  .emotion-44 {
    padding: 0.5rem 1rem 1rem 0;
  }
}

.emotion-46 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  overflow-wrap: anywhere;
}

.emotion-46:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-46:hover,
.emotion-46:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-46:visited {
  color: #6E6E73;
}

.emotion-117 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <div
    class="emotion-0 emotion-1"
    dir="ltr"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <section
        aria-labelledby="recommendations-heading"
        class=" emotion-4 emotion-5"
        data-e2e="recommendations-heading"
        role="region"
      >
        <div
          class="emotion-6 emotion-7"
        >
          <a
            class="emotion-8 emotion-9"
            href="#end-of-recommendations"
          >
            Saltar Quizás también te interese y continuar leyendo
          </a>
          <div
            class="emotion-10 emotion-11 emotion-12 emotion-13"
          >
            <strong
              class="emotion-14 emotion-15"
            >
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                >
                  <span
                    class="emotion-20 emotion-21"
                    dir="ltr"
                    id="recommendations-heading"
                  >
                    Quizás también te interese
                  </span>
                </span>
              </span>
            </strong>
          </div>
          <ul
            class="emotion-1 emotion-23 emotion-24"
            dir="ltr"
            role="list"
          >
            <li
              class="emotion-1 emotion-26 emotion-27"
              dir="ltr"
              role="listitem"
            >
              <div
                class="emotion-28 emotion-1"
                dir="ltr"
              >
                <div
                  class="emotion-30 emotion-31"
                  data-e2e="story-promo-wrapper"
                >
                  <div
                    class="emotion-32 emotion-33"
                    data-e2e="story-promo"
                  >
                    <div
                      class="emotion-34 emotion-35"
                      dir="ltr"
                    >
                      <div
                        class="emotion-36 emotion-37"
                      >
                        <div
                          class="emotion-38 emotion-39"
                        >
                          <div
                            class="lazyload-wrapper"
                          >
                            <div
                              class="lazyload-placeholder"
                            />
                          </div>
                        </div>
                        <div
                          class="emotion-40 emotion-41"
                        />
                      </div>
                    </div>
                    <div
                      class="emotion-42 emotion-43"
                      dir="ltr"
                    >
                      <div
                        class="emotion-44 emotion-45"
                      >
                        <a
                          class="emotion-46 emotion-47"
                          href="/mundo/noticias-53377054"
                        >
                          La conmovedora historia de cómo una madre y el hombre preso por la muerte de su hija se unieron para atrapar al verdadero asesino
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
            <li
              class="emotion-1 emotion-26 emotion-27"
              dir="ltr"
              role="listitem"
            >
              <div
                class="emotion-28 emotion-1"
                dir="ltr"
              >
                <div
                  class="emotion-30 emotion-31"
                  data-e2e="story-promo-wrapper"
                >
                  <div
                    class="emotion-32 emotion-33"
                    data-e2e="story-promo"
                  >
                    <div
                      class="emotion-34 emotion-35"
                      dir="ltr"
                    >
                      <div
                        class="emotion-36 emotion-37"
                      >
                        <div
                          class="emotion-38 emotion-39"
                        >
                          <div
                            class="lazyload-wrapper"
                          >
                            <div
                              class="lazyload-placeholder"
                            />
                          </div>
                        </div>
                        <div
                          class="emotion-40 emotion-41"
                        />
                      </div>
                    </div>
                    <div
                      class="emotion-42 emotion-43"
                      dir="ltr"
                    >
                      <div
                        class="emotion-44 emotion-45"
                      >
                        <a
                          class="emotion-46 emotion-47"
                          href="/mundo/noticias-america-latina-52884902"
                        >
                          Coronavirus en Colombia | El caso de la vigilante Edy Fonseca: "Me retuvieron en un edificio de clase alta durante la pandemia, lo acepté y me siento culpable"
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
            <li
              class="emotion-1 emotion-26 emotion-27"
              dir="ltr"
              role="listitem"
            >
              <div
                class="emotion-28 emotion-1"
                dir="ltr"
              >
                <div
                  class="emotion-30 emotion-31"
                  data-e2e="story-promo-wrapper"
                >
                  <div
                    class="emotion-32 emotion-33"
                    data-e2e="story-promo"
                  >
                    <div
                      class="emotion-34 emotion-35"
                      dir="ltr"
                    >
                      <div
                        class="emotion-36 emotion-37"
                      >
                        <div
                          class="emotion-38 emotion-39"
                        >
                          <div
                            class="lazyload-wrapper"
                          >
                            <div
                              class="lazyload-placeholder"
                            />
                          </div>
                        </div>
                        <div
                          class="emotion-40 emotion-41"
                        />
                      </div>
                    </div>
                    <div
                      class="emotion-42 emotion-43"
                      dir="ltr"
                    >
                      <div
                        class="emotion-44 emotion-45"
                      >
                        <a
                          class="emotion-46 emotion-47"
                          href="/mundo/noticias-internacional-53113381"
                        >
                          Soy una mujer genocida y aún me persiguen los recuerdos de lo que hice
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
            <li
              class="emotion-1 emotion-26 emotion-27"
              dir="ltr"
              role="listitem"
            >
              <div
                class="emotion-28 emotion-1"
                dir="ltr"
              >
                <div
                  class="emotion-30 emotion-31"
                  data-e2e="story-promo-wrapper"
                >
                  <div
                    class="emotion-32 emotion-33"
                    data-e2e="story-promo"
                  >
                    <div
                      class="emotion-34 emotion-35"
                      dir="ltr"
                    >
                      <div
                        class="emotion-36 emotion-37"
                      >
                        <div
                          class="emotion-38 emotion-39"
                        >
                          <div
                            class="lazyload-wrapper"
                          >
                            <div
                              class="lazyload-placeholder"
                            />
                          </div>
                        </div>
                        <div
                          class="emotion-40 emotion-41"
                        />
                      </div>
                    </div>
                    <div
                      class="emotion-42 emotion-43"
                      dir="ltr"
                    >
                      <div
                        class="emotion-44 emotion-45"
                      >
                        <a
                          class="emotion-46 emotion-47"
                          href="/mundo/vert-cul-53370542"
                        >
                          Estrenos 2020: las 10 mejores películas de lo que va del año según la BBC (y que seguramente no pudiste ver en el cine)
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
          <p
            class="emotion-117 emotion-118"
            id="end-of-recommendations"
            tabindex="-1"
          >
            Final de Quizás también te interese
          </p>
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`CpsRecommendations should render when cpsRecommendations toggle is enabled and the service supports recommendations for rtl service 1`] = `
@media (max-width:14.9375rem) {
  .emotion-0 {
    margin-right: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-0 {
    margin-right: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-0 {
    margin-right: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-0 {
    margin-right: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-0 {
    margin-right: 20%;
  }
}

@media (min-width:80rem) {
  .emotion-0 {
    margin-right: 40%;
  }
}

@supports (display:grid) {
  .emotion-0 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width:14.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(5,1fr);
      grid-column-end: span 5;
      grid-column-start: 1;
    }
  }

  @media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(5,1fr);
      grid-column-end: span 5;
      grid-column-start: 2;
    }
  }

  @media (min-width:80rem) {
    .emotion-0 {
      grid-template-columns: repeat(10,1fr);
      grid-column-end: span 10;
      grid-column-start: 5;
    }
  }
}

.emotion-2 {
  background-color: #F2F2F2;
  margin: 1.5rem 0;
  padding: 1rem 0.5rem;
}

@media (min-width: 25rem) and (max-width: 62.9375rem) {
  .emotion-2 {
    margin: 0 0 1.5rem;
    padding: 0 0 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    margin: 0 0 1.5rem;
    padding: 1rem 0;
  }
}

@media (min-width: 63rem) {
  .emotion-2 {
    padding: 1rem;
  }
}

@media (max-width: 24.9375rem) {
  .emotion-4 {
    padding: 0 0.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 62.9375rem) {
  .emotion-4 {
    padding: 0 1rem;
  }
}

.emotion-6 {
  position: relative;
}

.emotion-8 {
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.875rem;
  line-height: 1rem;
  background-color: #FFFFFF;
  border: 0.125rem solid #222222;
  color: #222222;
  display: block;
  left: 0;
  line-height: 1;
  padding: 0.75rem;
  position: absolute;
  -webkit-text-decoration: none;
  text-decoration: none;
  top: 0;
  z-index: 10;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 0.8125rem;
  }
}

.emotion-8:not(:focus):not(:active) {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-10 {
  margin: 0;
  padding: 0;
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    margin: 0 0 1rem;
  }
}

.emotion-12 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

@media (min-width:37.5rem) {
  .emotion-12 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-12 {
    margin-bottom: 1.5rem;
  }
}

.emotion-14 {
  margin: 0;
  padding: 0;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width:37.5rem) {
  .emotion-18 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-20 {
  font-size: 1.25rem;
  line-height: 1.75rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #F2F2F2;
  margin: 1rem 0;
  padding-left: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-20 {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-20 {
    font-size: 1.5rem;
    line-height: 2rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-20 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .emotion-20 {
    padding-left: 1rem;
  }
}

.emotion-23 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

@supports (display:grid) {
  .emotion-23 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width:14.9375rem) {
    .emotion-23 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-23 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-23 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-23 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-23 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width:80rem) {
    .emotion-23 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 1rem;
    }
  }
}

.emotion-26:last-child {
  border: none;
}

@supports (display:grid) {
  .emotion-26 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width:14.9375rem) {
    .emotion-26 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
    }
  }

  @media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-26 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
    }
  }

  @media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-26 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
    }
  }

  @media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-26 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
    }
  }

  @media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-26 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
    }
  }

  @media (min-width:80rem) {
    .emotion-26 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
    }
  }
}

@supports (display:grid) {
  .emotion-28 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width:14.9375rem) {
    .emotion-28 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-28 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-28 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-28 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-28 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width:80rem) {
    .emotion-28 {
      grid-template-columns: repeat(1,1fr);
      grid-column-end: span 1;
      grid-column-gap: 1rem;
    }
  }
}

.emotion-30>div {
  display: grid;
  margin: 0.25rem 0;
  background-color: #FDFDFD;
}

@media (max-width: 62.9375rem) {
  .emotion-30>div {
    margin: 0.25rem 0;
  }
}

.emotion-32 {
  position: relative;
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-32 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }

  @media (min-width:37.5rem) {
    .emotion-32 {
      grid-column-gap: 1rem;
    }
  }

  @media (min-width:63rem) {
    .emotion-32 {
      display: block;
    }
  }
}

.emotion-34 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

@media (min-width:63rem) {
  .emotion-34 {
    display: block;
    width: 100%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-34 {
    width: initial;
    grid-column: 1/span 2;
  }
}

.emotion-36 {
  position: relative;
}

.emotion-38 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #F2F2F2;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 60px 17px;
  padding-bottom: 56.21212121212121%;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

@media (min-width:25rem) {
  .emotion-38 {
    background-size: 77px 22px;
  }
}

@media (min-width:63rem) {
  .emotion-38 {
    background-size: 93px 27px;
  }
}

@media (min-width:25rem) {
  .emotion-40 {
    position: absolute;
    bottom: 0;
  }
}

.emotion-40>* {
  height: 2rem;
  padding: 0.5rem 0.25rem;
}

@media (max-width:24.9375rem) {
  .emotion-40>* {
    height: 1.25rem;
    padding: 0.25rem 0.25rem 0;
  }
}

.emotion-42 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

@media (min-width:37.5rem) {
  .emotion-42 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .emotion-42 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-42 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3/span 4;
  }

  @media (min-width:63rem) {
    .emotion-42 {
      padding-top: 0.5rem;
    }
  }
}

.emotion-44 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.5rem;
  padding: 0.5rem 0 0.5rem 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-44 {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-44 {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-44 {
    padding: 0.5rem 0 1rem 1rem;
  }
}

.emotion-46 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  overflow-wrap: anywhere;
}

.emotion-46:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-46:hover,
.emotion-46:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-46:visited {
  color: #6E6E73;
}

.emotion-61 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #F2F2F2;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 60px 17px;
  padding-bottom: 56.25%;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

@media (min-width:25rem) {
  .emotion-61 {
    background-size: 77px 22px;
  }
}

@media (min-width:63rem) {
  .emotion-61 {
    background-size: 93px 27px;
  }
}

.emotion-117 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <div
    class="emotion-0 emotion-1"
    dir="rtl"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <section
        aria-labelledby="recommendations-heading"
        class=" emotion-4 emotion-5"
        data-e2e="recommendations-heading"
        role="region"
      >
        <div
          class="emotion-6 emotion-7"
        >
          <a
            class="emotion-8 emotion-9"
            href="#end-of-recommendations"
          >
            تخطى مواضيع قد تهمك وواصل القراءة
          </a>
          <div
            class="emotion-10 emotion-11 emotion-12 emotion-13"
          >
            <strong
              class="emotion-14 emotion-15"
            >
              <span
                class="emotion-16 emotion-17"
              >
                <span
                  class="emotion-18 emotion-19"
                >
                  <span
                    class="emotion-20 emotion-21"
                    dir="rtl"
                    id="recommendations-heading"
                  >
                    مواضيع قد تهمك
                  </span>
                </span>
              </span>
            </strong>
          </div>
          <ul
            class="emotion-1 emotion-23 emotion-24"
            dir="rtl"
            role="list"
          >
            <li
              class="emotion-1 emotion-26 emotion-27"
              dir="rtl"
              role="listitem"
            >
              <div
                class="emotion-28 emotion-1"
                dir="rtl"
              >
                <div
                  class="emotion-30 emotion-31"
                  data-e2e="story-promo-wrapper"
                >
                  <div
                    class="emotion-32 emotion-33"
                    data-e2e="story-promo"
                  >
                    <div
                      class="emotion-34 emotion-35"
                      dir="rtl"
                    >
                      <div
                        class="emotion-36 emotion-37"
                      >
                        <div
                          class="emotion-38 emotion-39"
                        >
                          <div
                            class="lazyload-wrapper"
                          >
                            <div
                              class="lazyload-placeholder"
                            />
                          </div>
                        </div>
                        <div
                          class="emotion-40 emotion-41"
                        />
                      </div>
                    </div>
                    <div
                      class="emotion-42 emotion-43"
                      dir="rtl"
                    >
                      <div
                        class="emotion-44 emotion-45"
                      >
                        <a
                          class="emotion-46 emotion-47"
                          href="/arabic/middleeast-53329495"
                        >
                          الصراع في سوريا: الأمم المتحدة تقول إن جرائم حرب "فظيعة" ارتكبت في معركة ادلب
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
            <li
              class="emotion-1 emotion-26 emotion-27"
              dir="rtl"
              role="listitem"
            >
              <div
                class="emotion-28 emotion-1"
                dir="rtl"
              >
                <div
                  class="emotion-30 emotion-31"
                  data-e2e="story-promo-wrapper"
                >
                  <div
                    class="emotion-32 emotion-33"
                    data-e2e="story-promo"
                  >
                    <div
                      class="emotion-34 emotion-35"
                      dir="rtl"
                    >
                      <div
                        class="emotion-36 emotion-37"
                      >
                        <div
                          class="emotion-61 emotion-39"
                        >
                          <div
                            class="lazyload-wrapper"
                          >
                            <div
                              class="lazyload-placeholder"
                            />
                          </div>
                        </div>
                        <div
                          class="emotion-40 emotion-41"
                        />
                      </div>
                    </div>
                    <div
                      class="emotion-42 emotion-43"
                      dir="rtl"
                    >
                      <div
                        class="emotion-44 emotion-45"
                      >
                        <a
                          class="emotion-46 emotion-47"
                          href="/arabic/middleeast-53146050"
                        >
                          الحرب في ليبيا: الرئيس الفرنسي ماكرون يقول إن تركيا تمارس "لعبة خطرة" في ليبيا
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
            <li
              class="emotion-1 emotion-26 emotion-27"
              dir="rtl"
              role="listitem"
            >
              <div
                class="emotion-28 emotion-1"
                dir="rtl"
              >
                <div
                  class="emotion-30 emotion-31"
                  data-e2e="story-promo-wrapper"
                >
                  <div
                    class="emotion-32 emotion-33"
                    data-e2e="story-promo"
                  >
                    <div
                      class="emotion-34 emotion-35"
                      dir="rtl"
                    >
                      <div
                        class="emotion-36 emotion-37"
                      >
                        <div
                          class="emotion-61 emotion-39"
                        >
                          <div
                            class="lazyload-wrapper"
                          >
                            <div
                              class="lazyload-placeholder"
                            />
                          </div>
                        </div>
                        <div
                          class="emotion-40 emotion-41"
                        />
                      </div>
                    </div>
                    <div
                      class="emotion-42 emotion-43"
                      dir="rtl"
                    >
                      <div
                        class="emotion-44 emotion-45"
                      >
                        <a
                          class="emotion-46 emotion-47"
                          href="/arabic/middleeast-52959311"
                        >
                          ليبيا: هل يخوض أردوغان مغامرة وقودها السوريون؟
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
            <li
              class="emotion-1 emotion-26 emotion-27"
              dir="rtl"
              role="listitem"
            >
              <div
                class="emotion-28 emotion-1"
                dir="rtl"
              >
                <div
                  class="emotion-30 emotion-31"
                  data-e2e="story-promo-wrapper"
                >
                  <div
                    class="emotion-32 emotion-33"
                    data-e2e="story-promo"
                  >
                    <div
                      class="emotion-34 emotion-35"
                      dir="rtl"
                    >
                      <div
                        class="emotion-36 emotion-37"
                      >
                        <div
                          class="emotion-61 emotion-39"
                        >
                          <div
                            class="lazyload-wrapper"
                          >
                            <div
                              class="lazyload-placeholder"
                            />
                          </div>
                        </div>
                        <div
                          class="emotion-40 emotion-41"
                        />
                      </div>
                    </div>
                    <div
                      class="emotion-42 emotion-43"
                      dir="rtl"
                    >
                      <div
                        class="emotion-44 emotion-45"
                      >
                        <a
                          class="emotion-46 emotion-47"
                          href="/arabic/inthepress-52320329"
                        >
                          صحف بريطانية تناقش "الاختبار" الروسي في الشرق الأوسط و"العلاجات الدجلية" لفيروس كورونا
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
          <p
            class="emotion-117 emotion-118"
            id="end-of-recommendations"
            tabindex="-1"
          >
            مواضيع قد تهمك نهاية
          </p>
        </div>
      </section>
    </div>
  </div>
</div>
`;
